client/src/pages/Fixeddeposit.css
#fdForm{
    width: 40vw;
    height: 50vh; /* Increased box height */
    background-color: rgba(211, 188, 188, 0.309);
    padding: 2rem;
    align-items: center;
    margin-left: 10vw;
    margin-top: 10vh;
    font-family: monospace;
    font-weight: 600;
    gap: 4rem; /* Increased gap between boxes */
}
    #fdPage {
        background-image: url('./img/fd.jpg'); /* Path to your background image */
        background-size: cover; /* Ensure the image covers the entire container */
        background-position: center; /* Center the background image */
        background-repeat: no-repeat; /* Prevent the image from repeating */
        min-height: 100vh; /* Ensure the container covers the full viewport height */
        display: flex;
        justify-content: center;
        align-items: center;
        filter: brightness(100%); /* Adjust brightness to make the image clearer */
        opacity: 1; /* Adjust opacity to make the image clearer */
    }

#fdplans{
    width: 36vw;
    height: 2.5rem;
    position: relative;
    right: 2rem;
    margin-top: 1rem;
    
    
}
#startFD{
    margin-top: 2rem;
}
#backFD{
    margin-top: 2rem;
    background-color: red;
    border: 1px solid red;
    margin-left: 1rem;
    width: 4rem;
    color: white;
}
#fdsuccess,#fderror{
    width: 1rem;
    margin-left: 7rem;
    margin-bottom: 1rem;
    
}
#success_msg,#error_msg,#error_msg2{
    width: 20rem;
    position: fixed;
    left: 35%;
    top: 0%;
    font-family: monospace;
    font-weight: 600;
    border: 1px solid black;
    padding: 1rem;
    background-color: black;
    color: white;
    display: none;
    font-size: small;
}
label {
    font-size: 1.2rem; /* Increase label letter size */
    font-family: 'Times New Roman', Times, serif;
    
    
}
#fdOk,#fderror{
    width: 5rem;
    margin-left: 6rem;
}
@media screen and (max-width:600px){
    #fdplans{
        width: 47vw;
    }
}

